@@ -294,6 +294,9 @@ New in v0.8.00 (2016/07/??)
   - Don't log incremental deletes for chains that have no incrementals
 * Fixed bug #1724144 "--gpg-options unused with some commands"
   - Add --gpg-options to get version run command
+* Fixed bug #1720159 - Cannot allocate memory with large manifest file since 0.7.03
+  - filelist is not read if --file-changed option in collection-status not present
+  - This will keep memory usage lower in non collection-status operations
 
 
 New in v0.7.08 (2016/07/02)
